--- a/src/zcmt_textarea.w3ht.data.html
+++ b/src/zcmt_textarea.w3ht.data.html
@@ -20,8 +20,8 @@
 							</div>
 						</div>
 						<div class="float-end mt-2 pt-1">
-							<input type="submit" name="send" class="btn btn-primary btn-sm" value="Invia">
-							<button type="button" onclick="ClearTextArea();" class="btn btn-outline-primary btn-sm">Cancella</button>
+							<input type="submit" name="send" class="btn btn-primary btn-sm" value="#label_send#">
+							<button type="button" onclick="ClearTextArea();" class="btn btn-outline-primary btn-sm">#label_cancel#</button>
 						</div>
 					</form>
 				</div>
