--- a/src/zcmt_comment.w3ht.data.html
+++ b/src/zcmt_comment.w3ht.data.html
@@ -1,20 +1,32 @@
-<div class="d-flex flex-start mb-4">
-	<img class="rounded-circle shadow-1-strong me-3" src="https://ui-avatars.com/api/?name=#avatar_name#&background=random" alt = "avatar" height="50" />
+<div class="/*ABAP:sub_comment:*/ d-flex flex-start mb-4">
+	<img class="rounded-circle shadow-1-strong me-3" src="https://ui-avatars.com/api/?name=/*ABAP:avatar_name:*/&background=random" alt = "avatar" height="/*ABAP:avatar_dim:*/" />
 	<div class="card w-100">
 		<div class="card-body p-4">
 			<div class="">
-				<h6>#comment_author#</h6>
-				<p class="small">#comment_subtitle#</p>
-				<p>#comment_text#</p>
+				<h6><!--ABAP:comment_author:--></h6>
+				<p class="small"><!--ABAP:comment_subtitle:--></p>
+				<p><!--ABAP:comment_content:--></p>
 				<div class="small d-flex justify-content-start">
-					<a href="SAPEVENT:#like_event#?#like_param#" class="d-flex align-items-center me-3">
-						#if[already_upvoted]<i class="fas fa-thumbs-up me-2" style="margin-top: -0.16rem;"></i>
-						#if[to_upvote]<i class="far fa-thumbs-up me-2" style="margin-top: -0.16rem;"></i>
-						<p class="small text-muted mb-0">#upvotes#</p>
+					<a href="SAPEVENT:/*ABAP:like_event:*/?/*ABAP:comment_id:*/" class="d-flex align-items-center me-3">
+						<i class="/*ABAP:thumb_style:*/ fa-thumbs-up me-2" style="margin-top: -0.16rem;"></i>
+						<p class="small text-muted mb-0"><!--ABAP:upvotes:--></p>
 					</a>
-					#if[own_comment]<a class="d-flex align-items-center me-3" href="SAPEVENT:DELETE?#delete_param#"><i class="far fa-trash-can"></i></a>
+					<a style="display: /*ABAP:disp_reply:*/ !important" href="#" onclick="Reply(this);return false" class="d-flex align-items-center me-3" data-comid="/*ABAP:comment_id:*/">
+						<i class="fa-solid fa-reply"></i>
+						<p class="small text-muted mb-0" style="margin-left: 0.35rem;"><!--ABAP:replies:--></p>
+					</a>
+					<a style="display: /*ABAP:disp_exp:*/ !important" href="SAPEVENT:EXPLODE?/*ABAP:comment_id:*/" class="d-flex align-items-center me-3">
+						<i class="/*ABAP:explode_icon:*/"></i>
+					</a>
+					<a style="display: /*ABAP:disp_delete:*/ !important" href="SAPEVENT:DELETE?/*ABAP:comment_id:*/" class="d-flex align-items-center me-3"><i class="far fa-trash-can"></i></a>
 				</div>
 			</div>
 		</div>
 	</div>
+</div>
+<div class="reply_text_area" id="rta_/*ABAP:comment_id:*/" style="display: none">
+<!--ABAP:reply_text_area:-->
+</div>
+<div class="sub-comments" id="sc_/*ABAP:comment_id:*/" style="display: /*ABAP:disp_sub:*/">
+<!--ABAP:sub_comments:-->
 </div>
